--- a/events.html
+++ b/events.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">
     <title>Events - PSA MP 33rd Civil Registration Month</title>
+    <link rel="stylesheet" href="assets/css/loader.css">
     <link rel="stylesheet" href="assets/css/timeline.css">
 </head>
 <body>
+    <div class="loader"></div>
     <div class="main">
         <div id="particles-js"></div>
         <h3 class="heading">Events on 2023 Civil Registration Month</h3>
