--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">
     <title>PSA MP 33rd Civil Registration Month</title>
+    <link rel="stylesheet" href="assets/css/loader.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/card.css">
     <link rel="stylesheet" href="assets/css/parllaxcards.css">
 </head>
 <body>
+    <div class="loader"></div>
     <div id="cover-page">
         <div id="father-container">
             <div id="particles-js"></div>
@@ -30,7 +32,7 @@
         </div>
     </div>
     <div id="choose-area" class="text-center">
-        <h1 class="pt-4 text-dark ocr">Mountain Province's Vital Statistics</h1>
+        <h1 class="pt-4 text-dark ocr">Vital Statistics</h1>
         <div class="page-content qs">
             <div class="card first-card">
                 <div class="content">
@@ -110,7 +112,7 @@
                                 <span>Births</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>4,077 births were registered in 2022 with 34.73% increase from the previous year.</p>
+                                <p>4,077 births were registered in 2022 which is 34.73% increase from the previous year.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -119,7 +121,7 @@
                                 <span>Males</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>2,094 males were registered with 51.36% of the total registered births.</p>
+                                <p>2,094 males were registered which is 51.36% of the total registered births.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -128,7 +130,7 @@
                                 <span>Females</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>1,983 females were registered with 48.64% of the total registered births.</p>
+                                <p>1,983 females were registered which is 48.64% of the total registered births.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -137,7 +139,7 @@
                                 <span>Children</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>2,670 children are legitimate with 65.49% of the total registered births.</p>
+                                <p>2,670 children are legitimate which is 65.49% of the total registered births.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -146,7 +148,7 @@
                                 <span>Children</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>1,407 children are illegitimate with 34.51% of the total registered births.</p>
+                                <p>1,407 children are illegitimate which is 34.51% of the total registered births.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -155,7 +157,7 @@
                                 <span>Mothers</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>352 out of 4,077 are teenage mothers with 8.63% of the total registered mothers.</p>
+                                <p>352 out of 4,077 are teenage mothers which is 8.63% of the total registered mothers.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -164,7 +166,7 @@
                                 <span>Mothers</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>134 mothers were aged 13-17 with 3.29% of the total registered mothers.</p>
+                                <p>134 mothers were aged 13-17 which is 3.29% of the total registered mothers.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -173,7 +175,7 @@
                                 <span>Mothers</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>218 mothers were aged 18-19 with 5.34% of the total registered mothers.</p>
+                                <p>218 mothers were aged 18-19 which is 5.34% of the total registered mothers.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -191,7 +193,7 @@
                                 <span>Month</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>September had the highest number of births with 10.08% of the total registered births.</p>
+                                <p>September had the highest number of births which is 10.08% of the total registered births.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -200,7 +202,7 @@
                                 <span>Municipality</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Bauko had the highest number of births with 47.46% of the total registered births.</p>
+                                <p>Bauko had the highest number of births which is 47.46% of the total registered births.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -209,7 +211,7 @@
                                 <span>Municipality</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Sabangan had the lowest number of births with 0.88% of the total registered births.</p>
+                                <p>Sabangan had the lowest number of births which is 0.88% of the total registered births.</p>
                             </div></div>
                         </div></div>
                     </div>
@@ -241,7 +243,7 @@
                                 <span>Marriages</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>804 marriages were registered in 2022 with 20.18% increase from the previous year.</p>
+                                <p>804 marriages were registered in 2022. This is 20.18% higher than the previous year which is 669.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -250,7 +252,7 @@
                                 <span>Marriages</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>442 marriages were officiated through Civil with 54.98% of the total registered marriages.</p>
+                                <p>442 marriages were officiated through Civil which is 54.98% of the total registered marriages.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -259,7 +261,7 @@
                                 <span>Marriages</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>352 marriages were officiated through Church with 43.78% of the total registered marriages.</p>
+                                <p>352 marriages were officiated through Church which is 43.78% of the total registered marriages.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -268,7 +270,7 @@
                                 <span>Marriages</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>10 marriages were officiated through Tribal with 1.24% of the total registered marriages.</p>
+                                <p>10 marriages were officiated through Tribal which is 1.24% of the total registered marriages.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -295,7 +297,7 @@
                                 <span>Age Group</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Most couples got married at age 21-30 with 63.93% of men and 66.54% of women while it gets lesser as age increases.</p>
+                                <p>Most couples got married at age 21-30 which is 63.93% of men and 66.54% of women while it gets lesser as age increases.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -304,7 +306,7 @@
                                 <span>Month</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>May had the highest number of marriages with 14.30% of the total registered marriages.</p>
+                                <p>May had the highest number of marriages which is 14.30% of the total registered marriages.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -313,7 +315,7 @@
                                 <span>Municipality</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Bauko had the highest number of marriages with 21.89% of the total registered marriages.</p>
+                                <p>Bauko had the highest number of marriages which is 21.89% of the total registered marriages.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -322,7 +324,7 @@
                                 <span>Municipality</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Barlig had the lowest number of marriages with 2.99% of the total registered marriages.</p>
+                                <p>Barlig had the lowest number of marriages which is 2.99% of the total registered marriages.</p>
                             </div></div>
                         </div></div>
                     </div>
@@ -354,7 +356,7 @@
                                 <span>Deaths</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>952 deaths were registered with 37.28% decrease from the previous year.</p>
+                                <p>952 deaths were registered. This is 37.28% lower than the previous year which is 1,307.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -363,7 +365,7 @@
                                 <span>Males</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>522 male deaths were registered with 54.83% of the total registered deaths.</p>
+                                <p>522 male deaths were registered which is 54.83% of the total registered deaths.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -372,7 +374,7 @@
                                 <span>Females</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>420 female deaths were registered with 45.17% of the total registered deaths.</p>
+                                <p>420 female deaths were registered which is 45.17% of the total registered deaths.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -381,7 +383,7 @@
                                 <span>Deaths</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>2 deaths caused by Homicide were registered with 0.21% of the total registered deaths.</p>
+                                <p>2 deaths caused by Homicide were registered which is 0.21% of the total registered deaths.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -390,7 +392,7 @@
                                 <span>Deaths</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>9 deaths caused by Suicide were registered with 0.94% of the total registered deaths.</p>
+                                <p>9 deaths caused by Suicide were registered which is 0.94% of the total registered deaths.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -399,7 +401,7 @@
                                 <span>Deaths</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>29 deaths caused by Accident were registered with 3.04% of the total registered deaths.</p>
+                                <p>29 deaths caused by Accident were registered which is 3.04% of the total registered deaths.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -417,7 +419,7 @@
                                 <span>Age Group</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Most of the reported death occurs on ages 70-79 with 19.64% of the total registered deaths.</p>
+                                <p>Most of the reported death occurs on ages 70-79 which is 19.64% of the total registered deaths.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -426,7 +428,7 @@
                                 <span>Month</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>February had the highest number of deaths with 10.29% of the total registered deaths.</p>
+                                <p>February had the highest number of deaths which is 10.29% of the total registered deaths.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -435,7 +437,7 @@
                                 <span>Municipality</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Bauko had the highest number of deaths with 31.93% of the total registered deaths.</p>
+                                <p>Bauko had the highest number of deaths which is 31.93% of the total registered deaths.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -444,7 +446,7 @@
                                 <span>Municipality</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Barlig had the lowest number of deaths with 2.31% of the total registered deaths.</p>
+                                <p>Barlig had the lowest number of deaths which is 2.31% of the total registered deaths.</p>
                             </div></div>
                         </div></div>
                     </div>
