Minor revisions in events

--- a/events.html
+++ b/events.html
@@ -23,7 +23,7 @@
                     <br>
                     <img class="image" src="assets/img/sagada_meeting.jpg" alt="">
                     <h3 class="title">Sunset View and Pizza Bar, Poblacion, Sagada</h3>
-                    <p>PSA and Municipal Civil Registrars Meeting, Issuance of Memorandum Circulars related to Civil Registration and Vital Statistics Decade</p>
+                    <p>Philippine Statistics Authority and Municipal Civil Registrars Meeting, Issuance of Memorandum Circulars related to Civil Registration and Vital Statistics Decade</p>
                     <span class="circle"></span>
                     <span class="date">01 February 2023</span>
                 </li>
@@ -34,7 +34,7 @@
                     <br>
                     <img class="image" src="assets/img/mcr_quizbee.jpg" alt="">
                     <h3 class="title">Archog Hotel and Restaurant, Bontoc</h3>
-                    <p>IEC on Civil Registration and Vital Statistics and Quiz Bee for Municipal Civil Regitrars Officers and Solemnizing Officers</p>
+                    <p>IEC and Quiz Bee on Civil Registration and Vital Statistics for Municipal Civil Regitrars Officers and Solemnizing Officers</p>
                     <span class="circle"></span>
                     <span class="date">07 February 2023</span>
                 </li>
@@ -62,7 +62,7 @@
                 <li>
                     <img class="image" src="assets/img/butigue_registration.jpg" alt="">
                     <h3 class="title">Butigue, Paracelis</h3>
-                    <p>Registration of Birth and PhilID Registration conducted by Municipal Civil Registrars Office in partnership with PSA</p>
+                    <p>Registration of Birth and PhilID Registration conducted by Municipal Civil Registrars Office in partnership with Department of Social Welfare and Development and Philippine Statistics Authority</p>
                     <br>
                     <img class="image" src="assets/img/jerry_radio.jpg" alt="">
                     <h3 class="title">Radyo Pilipinas, Provincial Plaza, Bontoc</h3>
