Meep Moop New Update For Feb. 16

--- a/events.html
+++ b/events.html
@@ -13,7 +13,7 @@
     <div class="loader"></div>
     <div class="main">
         <div id="particles-js"></div>
-        <h3 class="heading">Events on 2023 Civil Registration Month</h3>
+        <h3 class="heading">Events on 33<sup>rd</sup> Civil Registration Month</h3>
         <div class="container">
             <ul>
                 <li>
@@ -23,52 +23,59 @@
                     <br>
                     <img class="image" src="assets/img/sagada_meeting.jpg" alt="">
                     <h3 class="title">Sunset View and Pizza Bar, Poblacion, Sagada</h3>
-                    <p>Philippine Statistics Authority and Municipal Civil Registrars Meeting, Issuance of Memorandum Circulars related to Civil Registration and Vital Statistics Decade</p>
+                    <p>Philippine Statistics Authority and Municipal Civil Registrars meeting, issuance of memorandum circulars related to civil registration and vital statistics decade</p>
                     <span class="circle"></span>
                     <span class="date">01 February 2023</span>
                 </li>
                 <li>
                     <img class="image" src="assets/img/bontoc_motorcade.jpg" alt="">
                     <h3 class="title">Heritage to Archog Hotel, Samoki, Bontoc</h3>
-                    <p>Civil Registration Month Motorcade</p>
+                    <p>Civil Registration Month motorcade</p>
                     <br>
                     <img class="image" src="assets/img/mcr_quizbee.jpg" alt="">
                     <h3 class="title">Archog Hotel and Restaurant, Bontoc</h3>
-                    <p>IEC and Quiz Bee on Civil Registration and Vital Statistics for Municipal Civil Regitrars Officers and Solemnizing Officers</p>
+                    <p>IEC and quiz bee on civil registration and vital statistics for Municipal Civil Regitrars Officers and Solemnizing Officers</p>
                     <span class="circle"></span>
                     <span class="date">07 February 2023</span>
                 </li>
                 <li>
                     <img class="image" src="assets/img/chico_students.jpg" alt="">
                     <h3 class="title">Chico Breeze, Eyeb, Poblacion, Bontoc</h3>
-                    <p>Civil Registration Quiz, Poster Making and Slogan Contest for Grade 12 Students of Mountain Province General Comprehensive High School and Saint Vincent High School</p>
+                    <p>Civil registration quiz, poster making and slogan contest for Grade 12 students of Mountain Province General Comprehensive High School and Saint Vincent High School</p>
                     <span class="circle"></span>
                     <span class="date">08 February 2023</span>
                 </li>
                 <li>
                     <img class="image" src="assets/img/ara_radio.jpg" alt="">
                     <h3 class="title">Radyo Natin, Caluttit, Bontoc</h3>
-                    <p>Radio Interview with Senior Statistical Specialist Ara Bongaoil and Anchor John Pelew on Philippine Identification System and Civil Registration</p>
+                    <p>Radio interview with Senior Statistical Specialist Ara Bongaoil and Anchor John Pelew on Philippine Identification System and Civil Registration</p>
                     <span class="circle"></span>
                     <span class="date">09 February 2023</span>
                 </li>
                 <li>
                     <img class="image" src="assets/img/paracelis_mwedding.jpg" alt="">
                     <h3 class="title">Municipal Hall, Poblacion, Paracelis</h3>
-                    <p>Attended Mass Wedding Conducted by Municipal Local Government Unit of Paracelis at 3PM</p>
+                    <p>Attended mass wedding conducted by Municipal Local Government Unit of Paracelis at 3PM</p>
                     <span class="circle"></span>
                     <span class="date">14 February 2023</span>
                 </li>
                 <li>
                     <img class="image" src="assets/img/butigue_registration.jpg" alt="">
                     <h3 class="title">Butigue, Paracelis</h3>
-                    <p>Registration of Birth and PhilID Registration conducted by Municipal Civil Registrars Office in partnership with Department of Social Welfare and Development and Philippine Statistics Authority</p>
+                    <p>IEC on civil registration, mobile registration of birth, validation of 4Ps and ePhilID distribution conducted by Municipal Civil Registrars Office in partnership with Department of Social Welfare and Development and Philippine Statistics Authority</p>
                     <br>
                     <img class="image" src="assets/img/jerry_radio.jpg" alt="">
                     <h3 class="title">Radyo Pilipinas, Provincial Plaza, Bontoc</h3>
-                    <p>Radio Interview with Chief Statistical Specialist Jerry Santos and Anchor Apollo Pada-en on Philippine Identification System and Vital Statistics</p>
+                    <p>Radio interview with Chief Statistical Specialist Jerry Santos and Anchor Apollo Pada-en on Philippine Identification System and Vital Statistics</p>
                     <span class="circle"></span>
                     <span class="date">15 February 2023</span>
+                </li>
+                <li>
+                    <img class="image" src="assets/img/bacarri_registration.jpg" alt="">
+                    <h3 class="title">Bacarri, Paracelis</h3>
+                    <p>IEC on civil registration, mobile registration of birth, validation of 4Ps and ePhilID distribution conducted by Municipal Civil Registrars Office in partnership with Department of Social Welfare and Development and Philippine Statistics Authority</p>
+                    <span class="circle"></span>
+                    <span class="date">16 February 2023</span>
                 </li>
             </ul>
         </div>
