--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="card second-card">
                 <div class="content">
                     <h2 class="title">QUIZ</h2>
-                    <p class="copy">Test your knowledge on Civil Registration.<br>Quiz is available until Feb. 27 11:45 PM!</p>
+                    <p class="copy">Test your knowledge on Civil Registration.<br>Quiz is available until March 1 11:45 PM!</p>
                     <a href="https://quizizz.com/join?gc=09122183" target="_blank" class="btn-card">Take Quiz</a>
                 </div>
             </div>
@@ -157,7 +157,7 @@
                                 <span>Mothers</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>352 out of 4,077 are teenage mothers which is 8.63% of the total registered mothers.</p>
+                                <p>352 out of 4,077 are teenage mothers which is 8.63% of the total registered mothers.<br><small>(Photo Courtesy by Hannah R. Morales, NPR)</small></p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -166,7 +166,7 @@
                                 <span>Mothers</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>134 mothers were aged 13-17 which is 3.29% of the total registered mothers.</p>
+                                <p>134 mothers were aged 13-17 which is 3.29% of the total registered mothers.<br><small>(Photo Courtesy by Hannah R. Morales, NPR)</small></p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -175,7 +175,7 @@
                                 <span>Mothers</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>218 mothers were aged 18-19 which is 5.34% of the total registered mothers.</p>
+                                <p>218 mothers were aged 18-19 which is 5.34% of the total registered mothers.<br><small>(Photo Courtesy by Hannah R. Morales, NPR)</small></p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -185,6 +185,24 @@
                             </div></div>
                             <div class="back"><div class="inner">
                                 <p>2 16-year-old mothers from Paracelis had their second-born child.</p>
+                            </div></div>
+                        </div></div>
+                        <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
+                            <div class="front" style="background-image: url(assets/img/holy_baby.jpg);"><div class="inner">
+                                <p>Joseph and Samuel</p>
+                                <span>Names</span>
+                            </div></div>
+                            <div class="back"><div class="inner">
+                                <p>Joseph and Samuel are the most registered names for male babies born in February from 2018-2022.</p>
+                            </div></div>
+                        </div></div>
+                        <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
+                            <div class="front" style="background-image: url(assets/img/baby_girl.jpg);"><div class="inner">
+                                <p>Lolita and Martina</p>
+                                <span>Names</span>
+                            </div></div>
+                            <div class="back"><div class="inner">
+                                <p>Lolita and Martina are the most registered names for female babies born in February from 2018-2022.</p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -202,7 +220,7 @@
                                 <span>Municipality</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Bauko had the highest number of births which is 47.46% of the total registered births.</p>
+                                <p>Bauko had the highest number of births which is 47.46% of the total registered births.<br><small>(Photo Courtesy by Aninah Ong, Wikipedia)</small></p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -211,7 +229,7 @@
                                 <span>Municipality</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Sabangan had the lowest number of births which is 0.88% of the total registered births.</p>
+                                <p>Sabangan had the lowest number of births which is 0.88% of the total registered births.<br><small>(Photo Courtesy by George Tugan, FB)</small></p>
                             </div></div>
                         </div></div>
                     </div>
@@ -270,7 +288,7 @@
                                 <span>Marriages</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>10 marriages were officiated through Tribal which is 1.24% of the total registered marriages.</p>
+                                <p>10 marriages were officiated through Tribal which is 1.24% of the total registered marriages.<br><small>(Photo Courtesy by Sally Clarita, Sally's Blog)</small></p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -315,7 +333,7 @@
                                 <span>Municipality</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Bauko had the highest number of marriages which is 21.89% of the total registered marriages.</p>
+                                <p>Bauko had the highest number of marriages which is 21.89% of the total registered marriages.<br><small>(Photo Courtesy by Aninah Ong, Wikipedia)</small></p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -324,7 +342,16 @@
                                 <span>Municipality</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Barlig had the lowest number of marriages which is 2.99% of the total registered marriages.</p>
+                                <p>Barlig had the lowest number of marriages which is 2.99% of the total registered marriages.<br><small>(Photo Courtesy by Rian Cael, danielsecotravel.com)</small></p>
+                            </div></div>
+                        </div></div>
+                        <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
+                            <div class="front" style="background-image: url(assets/img/total_singles.jpg);"><div class="inner">
+                                <p>57,019</p>
+                                <span>Individuals</span>
+                            </div></div>
+                            <div class="back"><div class="inner">
+                                <p>A total of 57,019 singles are living in Mountain Province; 29,964 are females and 32,055 are males.</p>
                             </div></div>
                         </div></div>
                     </div>
@@ -437,7 +464,7 @@
                                 <span>Municipality</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Bauko had the highest number of deaths which is 31.93% of the total registered deaths.</p>
+                                <p>Bauko had the highest number of deaths which is 31.93% of the total registered deaths.<br><small>(Photo Courtesy by Aninah Ong, Wikipedia)</small></p>
                             </div></div>
                         </div></div>
                         <div class="card-col" ontouchstart="this.classList.toggle('hover');"><div class="card-container">
@@ -446,7 +473,7 @@
                                 <span>Municipality</span>
                             </div></div>
                             <div class="back"><div class="inner">
-                                <p>Barlig had the lowest number of deaths which is 2.31% of the total registered deaths.</p>
+                                <p>Barlig had the lowest number of deaths which is 2.31% of the total registered deaths.<br><small>(Photo Courtesy by Rian Cael, danielsecotravel.com)</small></p>
                             </div></div>
                         </div></div>
                     </div>
@@ -499,7 +526,7 @@
                     </div>
                     <h5 class="mt-4 mx-2">The office is located at 3/F Commercial Building, Jungle Town Rd., Poblacion, Bontoc, Mountain Province.</h5>
                     <div class="map-container p-0 m-0">
-                        <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=3XQH+W3C,%20National%20Highway,%20Provincial%20Capitol,%20Lagawe%20City,%203600+(Mountain%20Province%20Provincial%20Statistical%20Office)&amp;t=&amp;z=17&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/distance-area-calculator.html">area maps</a></iframe>
+                        <iframe src="https://maps.google.com/maps?width=768&amp;height=512&amp;hl=en&amp;q=3XQH%2BW3C%2C%20National%20Highway%2C%20Provincial%20Capitol%2C%20Lagawe%20City%2C%203600+(Mountain%20Province%20Provincial%20Statistical%20Office)&amp;ie=UTF8&amp;t=k&amp;z=18&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                     </div>
                 </div>
                 <div class="d-grid gap-2 text-center sticky-bottom">
