--- a/events.html
+++ b/events.html
@@ -48,7 +48,7 @@
                 <li>
                     <img class="image" src="assets/img/ara_radio.jpg" alt="">
                     <h3 class="title">Radyo Natin, Caluttit, Bontoc</h3>
-                    <p>Radio interview with Senior Statistical Specialist Ara Bongaoil and Anchor John Pelew on Philippine Identification System and Civil Registration</p>
+                    <p>Radio interview with Supervising Statistical Specialist Ara Bongaoil and Anchor John Pelew on Philippine Identification System and Civil Registration</p>
                     <span class="circle"></span>
                     <span class="date">09 February 2023</span>
                 </li>
